Add OpenSpec core skills sync infrastructure
- Add mise sync-core task to pull official OpenSpec skills from upstream
- Add openspec-core/AGENTS.md documentation for core workflow skills
- Configure gitignore to track only documentation, not generated files
- Update project AGENTS.md to distinguish core vs extended skills

--- a/.mise/config.toml
+++ b/.mise/config.toml
@@ -1,3 +1,6 @@
 [tools]
 shellcheck = "latest"
 pre-commit = {version = "latest", postinstall = "pre-commit install"}
+
+[hooks]
+postinstall="mise run sync-core"
