--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,8 +9,8 @@ repos:
         files: ^(bin/openspecx|\.mise/tasks/)
 
       - id: check-version-bump
-        name: Check SKILL.md version bump
+        name: Check version bump in skills and commands
         entry: mise run version:check
         language: system
-        files: ^resources/.*SKILL\.md$
+        files: ^resources/(.*/SKILL\.md|claude/commands/opsx/.*\.md|opencode/command/opsx-.*\.md)$
         pass_filenames: false
